refs #6 and refs #7

--- a/signpdf.properties
+++ b/signpdf.properties
@@ -26,7 +26,7 @@ SSL_CA=ais-ca-ssl.crt
 TIMEOUT_CON=90
 
 # Service URL
-URL=https://ais.swisscom.com/DSS-Server/ws
+URL=https://ais.swisscom.com/AIS-Server/ws
 
 ##########################################################
 # Signature configuration
