Fix #8 iText support for LTV

--- a/signpdf.properties
+++ b/signpdf.properties
@@ -1,41 +1,35 @@
 ##########################################################
 # CUSTOMER used to identify to AIS (provided by Swisscom)
 ##########################################################
-CUSTOMER=IAM-Test
-KEY_STATIC=kp1-iam-signer
+CUSTOMER=<YourCustomerName>
+KEY_STATIC=<YourStaticKeyID>
 KEY_ONDEMAND=OnDemand-Advanced
 
 ##########################################################
 # Certificate related configurations
 # (The path is relative unless full path is specified)
 ##########################################################
-# Certificate used to access the service
+# SSL Public Certificate file to access the AIS service
 CERT_FILE=mycert.crt
 
-# Private key of the certificate used to access the service
-# (this file must be securely stored and managed !)
+# SSL Private Key file to access the AIS service
+# WARNING: Be sure to protect this file from unauthorized access!
 CERT_KEY=mycert.key
 
-# Root CA certificate bag file for SSL remote server verification
+# Root CA Certificate bag file to validate the certificates
 SSL_CA=ais-ca-ssl.crt
 
 ##########################################################
 # Connection configuration
 ##########################################################
-# Timeout of the client connection
+# Timeout of the client socket connection
 TIMEOUT_CON=90
 
-# Service URL
+# AIS Service Endpoint
 URL=https://ais.swisscom.com/AIS-Server/ws
 
 ##########################################################
 # Signature configuration
 ##########################################################
-# Digest method to be used (SHA256, SHA384, SHA512)
-DIGEST_METHOD=SHA256
-
-# Add OCSP in all applicable requests (true, false)?
-ADD_OCSP=true
-
-# Add timestamp in all applicable requests (true, false)?
-ADD_TIMESTAMP=true
+# Digest method (SHA256, SHA384, SHA512)
+DIGEST_METHOD=SHA512
