Compiled for Java version 1.6

--- a/signpdf.properties
+++ b/signpdf.properties
@@ -3,7 +3,7 @@
 ##########################################################
 CUSTOMER=<YourCustomerName>
 KEY_STATIC=<YourStaticKeyID>
-KEY_ONDEMAND=OnDemand-Advanced
+KEY_ONDEMAND=<YourOnDemandID>
 
 ##########################################################
 # Certificate related configurations
@@ -32,4 +32,4 @@ URL=https://ais.swisscom.com/AIS-Server/ws
 # Signature configuration
 ##########################################################
 # Digest method (SHA256, SHA384, SHA512)
-DIGEST_METHOD=SHA512
+DIGEST_METHOD=SHA256
