Fix issues with encrypted (with pass) private key files

--- a/signpdf.properties
+++ b/signpdf.properties
@@ -1,23 +1,23 @@
 ##########################################################
 # CUSTOMER used to identify to AIS (provided by Swisscom)
 ##########################################################
-CUSTOMER=<YourCustomerName>
-KEY_STATIC=<YourStaticKeyID>
-KEY_ONDEMAND=<YourOnDemandID>
+CUSTOMER=ais-90days-trial
+KEY_STATIC=static-saphir2-ch
+KEY_ONDEMAND=OnDemand-Advanced
 
 ##########################################################
 # Certificate related configurations
 # (The path is relative unless full path is specified)
 ##########################################################
 # SSL Public Certificate file to access the AIS service
-CERT_FILE=mycert.crt
+CERT_FILE=/Users/miro/projects/teebly/AIS/shell/mycert.crt
 
 # SSL Private Key file to access the AIS service
 # WARNING: Be sure to protect this file from unauthorized access!
-CERT_KEY=mycert.key
+CERT_KEY=/Users/miro/projects/teebly/AIS/shell/mycert.key
 
 # Root CA Certificate bag file to validate the certificates
-SSL_CA=ais-ca-ssl.crt
+SSL_CA=/Users/miro/projects/teebly/AIS/shell/ais-ca-ssl.crt
 
 ##########################################################
 # Connection configuration
