--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <artifactId>jutils</artifactId>
             <version>0.0.27-SNAPSHOT</version>
         </dependency>
+        <!--SOAP we removed in Java 11 core-->
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-ri</artifactId>
+            <version>2.3.2</version>
+            <type>pom</type>
+        </dependency>
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
